# MinXray

./: .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
